--- a/Project10/index.html
+++ b/Project10/index.html
@@ -51,73 +51,91 @@
                     <div class="grid_item">
                        <div class="card">
                         <img src="images/project1.png" alt="">
+                       <a href="/Project1/index.html">
                         <div class="card_content">
                          <h3>Tribute Website</h3>
                         </div>
+                    </a>
                        </div>
                     </div>
                     <div class="grid_item">
                      <div class="card">
                         <img src="images/Project2.png" alt="">
+                       <a href="/Project2/">
                         <div class="card_content">
                          <h3>Job Application</h3>
                         </div>
+                    </a>
                      </div>
                     </div>
                     <div class="grid_item">
                     <div class="card">
                         <img src="images/project3.png" alt="">
+                       <a href="/Project3/index.html">
                         <div class="card_content">
                          <h3>Parallax Website</h3>
                         </div>
+                    </a>
                     </div>
                     </div>
                     <div class="grid_item">
                  <div class="card">
                     <img src="images/project4.png" alt="">
+                   <a href="/Project4/index.html">
                     <div class="card_content">
                      <h3>Landing Page</h3>
                     </div>
+                </a>
                  </div>
                     </div>
                     <div class="grid_item">
                       <div class="card">
                         <img src="images/project5.png" alt="">
+                       <a href="/Project5/index.html">
                         <div class="card_content">
                          <h3>Restaurant Website</h3>
                         </div>
+                    </a>
                       </div>
                     </div>
                     <div class="grid_item">
                   <div class="card">
                     <img src="images/project6.png" alt="">
+                   <a href="/Project6/index.html">
                     <div class="card_content">
                      <h3>Music Website</h3>
                     </div>
+                </a>
                   </div>
                     </div>
                     <div class="grid_item">
                    <div class="card">
                     <img src="images/project7.png" alt="">
+                   <a href="/Project7/index.html">
                     <div class="card_content">
                      <h3>Youtube Clone</h3>
                     </div>
+                </a>
                    </div>
                     </div>
                     <div class="grid_item">
               <div class="card">
                 <img src="images/project8.png" alt="">
+               <a href="/Project8/index.html">
                 <div class="card_content">
                  <h3>Documentation Website</h3>
                 </div>
+            </a>
               </div>
                     </div>
                     <div class="grid_item">
                  <div class="card">
                     <img src="images/project9.png" alt="">
+                   <a href="/Project8/index.html">
                     <div class="card_content">
                      <h3>Blog Website</h3>
                     </div>
+                </a>
                  </div>
                     </div>
                 </div>
